# SpecTf

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
cloud/: README.md  __init__.py  cli.py  dataset.py  deploy.py  deploy_spectf_cloud.py  model.py  toa.py  train.py  train_spectf_cloud.py  utils.py
cloud/comparison_models/: __init__.py  train_resnet.py  train_xgb.py
cloud/comparison_models/ResNet/: __init__.py
cloud/comparison_models/XGBoost/: __init__.py
cloud/comparison_models/training_utils/: utils.py
cloud/datasets/: README.md  test_fids.csv
cloud/evaluation/: README.md  __init__.py  eval_l2a.py  eval_spectf.py
cloud/figures/: Fig3_ab.ipynb  README.md
cloud/reference_models/: README.md  train_resnet.py
cloud/reference_models/ResNet/: ResNet.py  resnet_arch.yml
cloud/reference_models/XGBoost/: xgb.py  xgboost_arch.yml  xgboost_reference.json
cloud/reference_models/training_utils/: utils.py
docs/: example.ipynb
docs/.ipynb_checkpoints/: example-checkpoint.ipynb
spectf/: README.md  __init__.py  backbones.py  dataset.py  losses.py  model.py  rt.py  spectf.toml  toa.py  uq.py  utils.py
spectf_cloud/: README.md  __init__.py  arch.yml  cli.py  deploy.py  deploy_v2.py  finetune.py  irr.npy  spectf_cloud_config.yml  train.py  weights.pt
spectf_cloud/comparison_models/: README.md  __init__.py  train_resnet.py  train_xgb.py
spectf_cloud/comparison_models/ResNet/: ResNet.py  __init__.py
spectf_cloud/comparison_models/XGBoost/: __init__.py
spectf_cloud/comparison_models/training_utils/: utils.py
spectf_cloud/datasets/: README.md  test_fids.csv  train_fids.csv
spectf_cloud/deploy/: __init__.py  deploy_pt.py  deploy_trt.py  gen_geotiff.py  make_engine.py  make_onnx.py  model_no_bandcat_bf16.onnx  tensor_rt_model.py
spectf_cloud/evaluation/: __init__.py  eval_l2a.py  eval_spectf.py
spectf_cloud/figures/: Fig2_rocauc.ipynb  Fig3_attn.py  Fig3_c.ipynb
spectf_cloud/weights/: README.md  current.pt
spectf_cloud/weights/v0.0.1/: README.md  model_no_bandcat_bf16.onnx
spectf_cloud/weights/v0.1.0/: README.md
tests/: make_dummy_data.py  test_train_cli_commands.py  test_train_spectf.py  test_utils.py  train_spectf.py  train_spectf_test.py
tests/data/: mock_dataset.hdf5
