[project]
name = "spectf"
version = "0.0.2"
requires-python = ">=3.9, <3.13"
authors = [
  {name = "Michael Kiper"},
  {name = "Jake H Lee"},
  {name = "Philip G Brodrick"},
]
maintainers = [
  {name = "Michael Kiper", email = "michael.kiper@jpl.nasa.gov"},
  {name = "Jake Lee", email = "jake.h.lee@jpl.nasa.gov"},
]
dependencies = [
  "torch >= 2.5.1",
  "numpy >= 1.20.0",
  "tqdm >= 4.67.1",
  "scikit-learn >= 1.6.1",
  "h5py >= 3.12.1",
  "schedulefree >= 1.4",
  "wandb >= 0.19.3",
  "rich-click >= 1.8.5",
  "rich >= 13.9.4",
  "trogon >= 0.6.0",
  "spectral >= 0.23.1",
  "isofit >= 3.2.2",
  "xgboost >= 2.1.3",
  "GDAL ~= 3.9.0",
]

[project.scripts]
spectf-cloud = "spectf_cloud.cli:main"

[project.optional-dependencies]
deploy-runtime = [
  "tensorrt==10.9.0.34",
  "pycuda>=2025",
]
make-onnx = [
  "onnx>=1.18.0",
]

[build-system]
requires = ["setuptools >= 75.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spectf", "spectf_cloud"]
include-package-data = true
